--- a/Android/CapstoneDesign/app/src/main/AndroidManifest.xml
+++ b/Android/CapstoneDesign/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.a2013myway.team.capstonedesign">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DeviceScanActivity" />
 
         <service
             android:name=".DetectService"
@@ -29,11 +33,23 @@
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.PACKAGE_REPLACED"/>
-                <data android:scheme="package" android:path="com.a2013myway.team.capstonedesign"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+
+                <data
+                    android:path="com.a2013myway.team.capstonedesign"
+                    android:scheme="package" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".DeviceControlActivity" />
+
+        <service
+            android:name=".BluetoothLeService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".ScanActivity"></activity>
     </application>
 
 </manifest>
