--- a/Android/CapstoneDesign/app/src/main/AndroidManifest.xml
+++ b/Android/CapstoneDesign/app/src/main/AndroidManifest.xml
@@ -18,14 +18,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".bluetooth.DeviceScanActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceScanActivity" />
 
         <service
             android:name=".DetectService"
