--- a/Android/CapstoneDesign/app/build.gradle
+++ b/Android/CapstoneDesign/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    compile 'com.github.d-max:spots-dialog:0.7@aar'
 
 }
